--- a/rule4be/templates/rule4be/edit_aol.html
+++ b/rule4be/templates/rule4be/edit_aol.html
@@ -1,21 +1,77 @@
 <div class="card-form__container border rounded-md mt-5 p-3 shadow-inner bg-white min-w-72">
     <div
-        class="modal-form">
-        <h1 class="form__title">Edit AOL</h1>
-        <form hx-post="{% url 'edit_aol' aol_id %}" hx-trigger="submit" hx-target="#create-form" id="create-form">
+        data-edit-aol-form
+        data-aol-id="{{ aol_id }}"
+        class="card-form__form">
+        <div class="form__header flex items-center">
+            <h1 class="form__title">Edit AOL</h1>
+            <i
+            data-close-crud-modal
+            class="icon--dismiss ms-auto text-lg cursor-pointer"
+            @click="clearAolCrudContainer()"
+            ></i>
+        </div>
+        <form
+            data-aol-id="{{ aol_id }}"
+            id="edit-form"
+            hx-post="{% url 'edit_aol' aol_id %}"
+            hx-trigger="submit"
+            hx-target=".status__message"
+            x-init="requiredFieldIndicator()"
+            x-data="{ ...formValidator(), uploading: false }">
             {% csrf_token %}
             <!-- Include the necessary input fields -->
-            <div>
-                <label for="name">Name:</label>
-                <input type="text" name="name" id="name" value="{{ form.instance.name }}" required>
+            <div class="form__label-field">
+                <label class="form__label" for="name">Name:</label>
+                <input class="form__input" type="text" name="name" id="name" value="{{ form.instance.name }}" required>
+                <div data-invalid-feedback class="invalid-feedback"></div>
+            </div>
+            <div class="form__label-field">
+                <label class="form__label" for="description">Description:</label>
+                <textarea class="form__input" type="text" name="description" id="description" required>{{ form.instance.description }}</textarea>
+                <div data-invalid-feedback class="invalid-feedback"></div>
             </div>
             <div>
-                <label for="description">Description:</label>
-                <textarea type="text" name="description" id="description" required>{{ form.instance.description }}</textarea>
-            </div>
-            <div>
-                <button type="submit">Update AOL</button>
+                <button class="button button--primary" type="submit">Update AOL</button>
             </div>
         </form>
     </div>
+    <div
+        data-status-toast-{{ aol_id }}
+        id="statusToast"
+        class="status__message toast-container bg-green-50 text-lg font-medium text-center rounded-lg p-3 w-full max-w-[300px] hidden">
+        <div class="toast copy-text-toast bg-green-50" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-body text-center fs-4 p-3">
+                {% if message %}
+                {{ message }}
+                {% endif %}
+            </div>
+        </div>
+    </div>
 </div>
+<!-- Handle statusToast -->
+<script>
+    $(document).ready(function() {
+        // Bind htmx:afterOnLoad event listener to the form
+        $('[data-edit-aol-form]').on('htmx:afterOnLoad', function() {
+            const formAolId = $(this).data('aol-id');
+
+            // Opens the toast
+            $('[data-status-toast-' + formAolId + ']').fadeIn(300, function() {
+                console.log('toast opened');
+                $(this).removeClass('hidden');
+            });
+
+            // Closes the toast after 2 seconds & then reloads the page
+            setTimeout(function() {
+                $('[data-status-toast-' + formAolId + ']').fadeOut(300, function() {
+                    $(this).addClass('hidden');
+                    console.log('toast closed');
+                    location.reload();
+                });
+            }, 2000);
+        });
+
+        // htmx.logAll();
+    });
+</script>
