--- a/rule4be/templates/rule4be/main.html
+++ b/rule4be/templates/rule4be/main.html
@@ -6,13 +6,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="https://unpkg.com/htmx.org@1.9.10"
-        integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
-        crossorigin="anonymous"></script> -->
-
+    
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@100;200;300;400;600;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
 
     <!-- Tailwind CSS - Must load before JavaScript files -->
     <link rel="stylesheet" href="{% static 'css/tailwind/tailwind-output.css' %}">
@@ -37,6 +33,7 @@
 
     {% block styles %}{% endblock %}
 </head>
+
 
 <body class="bg-white {{ body_class }}">
     <main class="w-full min-h-screen flex flex-col">
