--- a/rule4be/templates/rule4be/aols.html
+++ b/rule4be/templates/rule4be/aols.html
@@ -10,46 +10,25 @@
         </button>
         <div data-modal-form-container id="create-aol-form" class="absolute left-5 z-50" x-transition x-show="open"></div>
     </div>
-    <div
-        class="ms-auto relative"
-        x-data="{ open: false }">
+    <div class="ms-auto relative" x-data="{ open: false }">
         <button @click="open = ! open">
             <i class="icon--user text-lg"></i>
         </button>
-        <div
-            id="userDropdownMenu"
-            class="flex flex-col justify-between gap-y-4 bg-white px-6 py-4 rounded-md shadow border border-gray-100 absolute top-6 -right-2 z-50"
-            x-show="open"
-            x-transition
-            @click.away="open = false">
-            <span
-                class="menu__item flex justify-start items-center gap-x-2"
-                hx-get="{% url 'load_user_profile' %}"
-                hx-trigger="click"
-                hx-target="#profileContainer"
-                hx-swap="outerHTML">
+        <div id="userDropdownMenu" class="flex flex-col justify-between gap-y-4 bg-white px-6 py-4 rounded-md shadow border border-gray-100 absolute top-6 -right-2 z-50" x-show="open" x-transition @click.away="open = false">
+            <span class="menu__item flex justify-start items-center gap-x-2" hx-get="{% url 'load_user_profile' %}" hx-trigger="click" hx-target="#profileContainer" hx-swap="outerHTML">
                 <i class="icon--profile"></i>
                 <span>Profile</span>
             </span>
-            <a
-                class="flex justify-start items-center gap-x-2"
-                href="{% url 'logout' %}">
+            <a class="flex justify-start items-center gap-x-2" href="{% url 'logout' %}">
                 <i class="icon--logout"></i>
-                <span>Logout</span></a>
+                <span>Logout</span>
+            </a>
         </div>
     </div>
 </div>
-<div
-    id="profileContainer"
-    class="mt-12 swap-transition"
-></div>
-<div
-    id="aolContainer"
-    class="aol-container grid md:grid-cols-2 lg:grid-cols-4 gap-4 mt-12 px-5"
-    x-data="{ openSnapshotForm: null }"
-    @open-snapshot-form.window="openSnapshotForm = $event.detail.snapshotId">
+<div id="profileContainer" class="mt-12 swap-transition"></div>
+<div id="aolContainer" class="aol-container grid md:grid-cols-2 lg:grid-cols-4 gap-4 mt-12 px-5" x-data="{ openSnapshotForm: null }" @open-snapshot-form.window="openSnapshotForm = $event.detail.snapshotId">
     {% for area_of_life in aols %}
-
     <div class="aol-item card shadow-md bg-custom-pattern">
         <div class="card__header">
             <div class="flex justify-between items-start">
@@ -57,20 +36,20 @@
                     <h1 class="font-semibold text-2xl">{{ area_of_life.name }}</h1>
                     <p>{{ area_of_life.description }}</p>
                 </div>
-                <div class="aol-tools relative" x-data="{ open: false }">
+                <div class="aol-tools relative" x-data="{ open: false }" @click.outside="open = false">
                     <button @click="open = ! open">
                         <i class="fa-regular fa-ellipsis-vertical text-lg text-blue-500"></i>
                     </button>
-                    <div class="flex flex-col justify-between gap-x-4 bg-white p-2 rounded-md shadow border border-gray-100 absolute -top-12 -right-4" x-show="open" x-transition @click.away="open = false">
+                    <div class="aol-tools__buttons flex flex-col justify-between gap-x-4 bg-white p-2 rounded-md shadow border border-gray-100 absolute -top-12 -right-4" x-show="open" x-transition>
                         <div class="flex justify-end items-center gap-x-4">
-                            <button class="ms-auto" hx-get="{% url 'edit_aol' area_of_life.id %}" hx-headers='{"Content-Type":"text/html"}' hx-accept="text/html" hx-trigger="click" hx-target="#aolCrudFormContainer-{{ area_of_life.id }}" hx-swap="innerHTML">
+                            <button class="ms-auto" @click.stop hx-get="{% url 'edit_aol' area_of_life.id %}" hx-headers='{"Content-Type":"text/html"}' hx-accept="text/html" hx-trigger="click" hx-target="#aolCrudFormContainer-{{ area_of_life.id }}" hx-swap="innerHTML">
                                 <i class="icon icon--edit"></i>
                             </button>
-                            <button hx-get="{% url 'delete_aol' area_of_life.id %}" hx-headers='{"Content-Type":"text/html"}' hx-accept="text/html" hx-trigger="click" hx-target="#aolCrudFormContainer-{{ area_of_life.id }}" hx-swap="innerHTML">
+                            <button @click.stop hx-get="{% url 'delete_aol' area_of_life.id %}" hx-headers='{"Content-Type":"text/html"}' hx-accept="text/html" hx-trigger="click" hx-target="#aolCrudFormContainer-{{ area_of_life.id }}" hx-swap="innerHTML">
                                 <i class="icon icon--delete"></i>
                             </button>
                         </div>
-                        <div id="aolCrudFormContainer-{{ area_of_life.id }}"></div>
+                        <div data-aol-crud-form-container id="aolCrudFormContainer-{{ area_of_life.id }}"></div>
                     </div>
                 </div>
             </div>
@@ -86,16 +65,24 @@
         </div>
         <div data-snapshot-today-trigger hx-get="{% url 'load_today_snapshot_page' area_of_life.id %}" hx-trigger="click" hx-target="#today-{{ area_of_life.id }}" hx-headers='{"Content-Type":"text/html"}' hx-accept="text/html"></div>
     </div>
-
     {% endfor %}
 </div>
 
-
 <script>
-    document.addEventListener('htmx:afterRequest', (event) => {
-        document.body.click();
+    document.addEventListener('click', function(event) {
+        const elements = document.querySelectorAll('[x-data] [x-show="open"]');
+        elements.forEach(element => {
+            if (!element.contains(event.target) && element.__x && element.__x.$data.open !== undefined) {
+                element.__x.$data.open = false;
+            }
+        });
     });
+
+    function clearAolCrudContainer() {
+            // const aolCrudContainer = document.getElementById('aolCrudContainer');
+            const aolCrudContainer = event.target.closest('[data-aol-crud-form-container]');
+            aolCrudContainer.innerHTML = '';
+            document.body.click();
+        }
 </script>
-<!-- Display the result of the login attempt -->
-<!-- <div id="login-result"></div> -->
 {% endblock %}
