--- a/rule4be/templates/rule4be/login.html
+++ b/rule4be/templates/rule4be/login.html
@@ -5,17 +5,14 @@
 <section class="page__content flex flex-col items-center">
     <section class="page__intro bg-custom-pattern pb-5">
         <div class="section__content py-5">
-            <h1 class="page__header mx-auto text-3xl font-medium my-5">A journal to remind you how far you've come, the
-                progress you've made towards your goals.</h1>
+            <h1 class="page__header mx-auto text-3xl font-medium my-5">A journal to remind you how far you've come, the progress you've made towards your goals.</h1>
             <blockquote class="text-xl my-5 p-5 relative max-w-[55ch] mx-auto">
                 <i class="icon--quote text-4xl opacity-25"></i>
-                <em><strong>Rule 4:</strong> Compare yourself to who you were yesterday, not who someone else is
-                    today.</em>
+                <em><strong>Rule 4:</strong> Compare yourself to who you were yesterday, not who someone else is today.</em>
                 <small class="text-right block">- Jordan B Peterson</small>
             </blockquote>
             <div class="page__intro mx-auto items-center">
-                <a class="button button--default button--outline w-fit block mx-auto" href="{% url 'signup' %}">Create
-                    Your Journal</a>
+                <a class="button button--default button--outline w-fit block mx-auto" href="{% url 'signup' %}">Create Your Journal</a>
             </div>
         </div>
     </section>
@@ -26,54 +23,7 @@
         </video>
     </section>
     <section class="py-5">
-        <div class="section__content">
-            <div class="grid grid-cols-2 gap-8 bg-custom-pattern p-5 mx-auto">
-                <div id="loginContainerTop" class="login__container bg-white p-5">
-                    <h2 class="form__title mx-auto">Login</h2>
-                    <!-- Standard form to handle login -->
-                    <form
-                        id="login-form"
-                        method="post"
-                        action="{% url 'load_login_page' %}"
-                        x-data="formValidator()"
-                        x-init="requiredFieldIndicator()">
-                        {% csrf_token %}
-                        <div class="form__label-field">
-                            <label class="form__label" for="username">Username:</label>
-                            <input class="form__intput" type="text" name="username" id="username" required>
-                            <div data-invalid-feedback class="invalid-feedback"></div>
-                        </div>
-                        <div class="form__label-field">
-                            <label class="form__label" for="password">Password:</label>
-                            <input class="form__intput" type="password" name="password" id="password" required>
-                            <div data-invalid-feedback class="invalid-feedback"></div>
-                        </div>
-                        <div>
-                            <button class="form__submit button button--primary" type="submit">Log In</button>
-                        </div>
-                    </form>
-                    <button
-                        class="button--text"
-                        hx-get="{% url 'password_reset' %}"
-                        hx-trigger="click"
-                        hx-target="#loginContainerTop"
-                        hx-swap="innerHTML">Forgot your password?</button>
-                </div>
-                <div id="signUpContainer" class="signup__container bg-white p-5">
-                    <h2 class="form__title mx-auto">Sign Up</h2>
-                    <div class="mt-12">
-                        <p class="text-xl my-5">Sign up to create an account</p>
-                        <button
-                            class="button button--default button--outline block w-fit mx-auto"
-                            hx-get="{% url 'signup' %}"
-                            hx-trigger="click"
-                            hx-target="#signUpContainer"
-                            hx-swap="innerHTML"
-                            >Sign Up</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div id="loginSignupSectionTop" class="section__content"></div>
     </section>
     <section class="how-it-works bg-custom-pattern py-5">
         <div class="section__content py-5">
@@ -81,28 +31,20 @@
             <div class="grid grid-cols-2 gap-4 bg-custom-pattern p-5 mt-12">
                 <div class="bg-white p-5">
                     <h2 class="text-2xl">Areas of Life</h2>
-                    <p>Set up a feed for each area of life you want to track. This can be goals, like fitness, finance
-                        or a project. Rule4 is not just for goals though, set up personal AOLs just to keep you smiling.
-                    </p>
+                    <p>Set up a feed for each area of life you want to track. This can be goals, like fitness, finance or a project. Rule4 is not just for goals though, set up personal AOLs just to keep you smiling.</p>
                 </div>
                 <div class="bg-white p-5">
                     <h2 class="text-2xl">Snapshots</h2>
-                    <p>You add snapshots to the different AOLs you've set up. This can be text, a photo, a video or a
-                        combination. Whatever provides the information you need for that AOL.</p>
+                    <p>You add snapshots to the different AOLs you've set up. This can be text, a photo, a video or a combination. Whatever provides the information you need for that AOL.</p>
                 </div>
                 <div class="bg-white p-5">
                     <h2 class="text-2xl">Reminders</h2>
-                    <p>Rule4 will remind you of previous snapshots whenver you add a new snapshot. That is the key
-                        though. You can only see past snapshots, by adding one for today. This helps to keep you
-                        focussed on today's events and today's progress.</p>
+                    <p>Rule4 will remind you of previous snapshots whenever you add a new snapshot. That is the key though. You can only see past snapshots, by adding one for today. This helps to keep you focused on today's events and today's progress.</p>
                 </div>
                 <div class="bg-white p-5">
                     <h2 class="text-2xl">Completely Private</h2>
-                    <p>There is no share or like buttons here. No notifications. This is for you, about you and your
-                        life. There is no keeping up with everyone else. Rule4 is your space to focus on yourself and
-                        what is truly valuable and important to you.</p>
+                    <p>There is no share or like buttons here. No notifications. This is for you, about you and your life. There is no keeping up with everyone else. Rule4 is your space to focus on yourself and what is truly valuable and important to you.</p>
                 </div>
-
             </div>
         </div>
     </section>
@@ -122,46 +64,47 @@
                 <div class="bg-white bg-custom-pattern p-5">
                     <p>Testimonial 4</p>
                 </div>
-
             </div>
         </div>
     </section>
     <section class="login-signup bg-custom-pattern">
-        <div class="section__content">
-            <div class="grid grid-cols-2 gap-8 p-5 mt-12">
-                <div class="login__container bg-white p-5">
-                    <h2 class="form__title">Login</h2>
-                    <!-- Standard form to handle login -->
-                    <!-- <form id="login-form" method="post" action="{% url 'load_login_page' %}">
-                        {% csrf_token %}
-                        <div class="form__label-field">
-                            <label class="form__label" for="username">Username:</label>
-                            <input class="form__intput" type="text" name="username" id="username" required>
-                        </div>
-                        <div class="form__label-field">
-                            <label class="form__label" for="password">Password:</label>
-                            <input class="form__intput" type="password" name="password" id="password" required>
-                        </div>
-                        <div>
-                            <button class="form__submit button button--primary" type="submit">Log In</button>
-                        </div>
-                    </form> -->
-                    <a href="{% url 'password_reset' %}">Forgot your password?</a>
-                </div>
-                <div class="signup__container bg-white p-5">
-                    <h2 class="form__title mx-auto">Sign Up</h2>
-                    <div class="mt-12">
-                        <p class="text-xl my-5">Sign up to create an account</p>
-                        <a class="button button--default button--outline block w-fit mx-auto"
-                            href="{% url 'signup' %}">Sign Up</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div id="loginSignupSectionBtm" class="section__content"></div>
     </section>
     <footer class="mt-12">
-        <p>&copy; 2024 Rule4.app | <a href="{% url 'terms_and_conditions' %}">Terms & Conditions</a> | <a
-                href="{% url 'privacy_policy' %}">Privacy Policy</a></p>
+        <p>&copy; 2024 Rule4.app | <a href="{% url 'terms_and_conditions' %}">Terms & Conditions</a> | <a href="{% url 'privacy_policy' %}">Privacy Policy</a></p>
     </footer>
-    </div>
-    {% endblock %}
+
+    <div
+        id="loginSignupSectionTrigger"
+        hx-get="{% url 'load_login_signup_section' %}"
+        hx-trigger="click"
+        hx-swap="innerHTML"
+    >login/signup section trigger</div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            function createObserver(selector, targetId) {
+                const container = document.querySelector(selector);
+                const observer = new IntersectionObserver(entries => {
+                    entries.forEach(entry => {
+                        if (entry.isIntersecting) {
+                            console.log('in view');
+                            // Load component when it's in view
+                            const trigger = document.getElementById('loginSignupSectionTrigger');
+                            trigger.setAttribute('hx-target', targetId);
+                            trigger.click();
+                        } else {
+                            console.log('out of view');
+                            // Unload component when it's out of view
+                            container.innerHTML = ''; // or any other unloading logic
+                        }
+                    });
+                });
+                observer.observe(container);
+            }
+
+            createObserver('#loginSignupSectionTop', '#loginSignupSectionTop');
+            createObserver('#loginSignupSectionBtm', '#loginSignupSectionBtm');
+        });
+    </script>
+{% endblock %}
