--- a/static/css/tailwind/tailwind-output.css
+++ b/static/css/tailwind/tailwind-output.css
@@ -1142,6 +1142,24 @@ button[type="submit"]:disabled:hover {
   line-height: 1;
 }
 
+.button--danger {
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(185 28 28 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
+.button--danger:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .button--outline {
   border-width: 1px;
   --tw-border-opacity: 1;
@@ -1597,6 +1615,10 @@ a:hover,
   margin-bottom: 1.25rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .ms-5 {
   margin-inline-start: 1.25rem;
 }
@@ -1651,6 +1673,10 @@ a:hover,
 
 .h-\[28px\] {
   height: 28px;
+}
+
+.min-h-72 {
+  min-height: 18rem;
 }
 
 .min-h-screen {
