--- a/rule4be/templates/rule4be/main.html
+++ b/rule4be/templates/rule4be/main.html
@@ -26,7 +26,7 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 
     <!-- Form Validation -->
-    <script src="{% static 'js/form-validation.js' %}" defer></script>
+    <script src="{% static 'js/form-validation.js' %}"></script>
 
     <!-- Global JS -->
     <script src="{% static 'js/global.js' %}" defer></script>
