--- a/static/css/tailwind/tailwind-output.css
+++ b/static/css/tailwind/tailwind-output.css
@@ -628,6 +628,19 @@ body.main-app > main {
   line-height: 2.5rem;
 }
 
+/* Password Reset */
+
+.password-reset-page section.content-container {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-width: 1024px) {
+  .password-reset-page section.content-container {
+    width: 33.333333%;
+  }
+}
+
 /* Main App */
 
 .main-app .page-content__container {
@@ -1675,6 +1688,10 @@ a:hover,
   height: 28px;
 }
 
+.h-dvh {
+  height: 100dvh;
+}
+
 .min-h-72 {
   min-height: 18rem;
 }
@@ -1718,6 +1735,10 @@ a:hover,
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-cols-2 {
@@ -1809,6 +1830,11 @@ a:hover,
   background-color: rgb(240 253 244 / var(--tw-bg-opacity));
 }
 
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1898,6 +1924,11 @@ a:hover,
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -2009,6 +2040,14 @@ a:hover,
 }
 
 @media (min-width: 1024px) {
+  .lg\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
+  }
+
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
