--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,4 +1,3 @@
 {% block content %}
-<h2>Password reset - Custom Template</h2>
-<p>An email has been sent with instructions to reset your password.</p>
+<p class="text-center text-xl text-white bg-green-600 rounded-lg p-3">An email has been sent with instructions to reset your password.</p>
 {% endblock %}
