--- a/users/templates/users/password_reset_form.html
+++ b/users/templates/users/password_reset_form.html
@@ -1,25 +1,34 @@
+{% extends 'rule4be/main.html' %}
+{% load static %}
 
 {% block content %}
-<h2 class="form__title mx-auto">Password Reset</h2>
-<form
-    method="post"
-    x-data="formValidator()"
-    x-init="requiredFieldIndicator()">
-    {% csrf_token %}
-    <div class="form__label-field">
-        <label class="form__label" for="id_email">Email:</label>
-        <input
-            class="form__intput"
-            x-model="email"
-            x-on:keyup="delayedValidateEmail"
-            type="email"
-            name="email"
-            id="id_email"
-            required>
-        <div data-invalid-feedback class="invalid-feedback" x-text="emailError"></div>
+<section class="content-container h-dvh grid grid-cols-1 justify-center items-center">
+    <div class="section_content p-5 bg-custom-pattern">
+        <h2 class="form__title mx-auto text-center">Password Reset</h2>
+        <form
+            hx-post="{% url 'password_reset' %}"
+            hx-trigger="submit"
+            hx-target="this"
+            method="post"
+            x-data="formValidator()"
+            x-init="requiredFieldIndicator()">
+            {% csrf_token %}
+            <div class="form__label-field">
+                <label class="form__label" for="id_email">Email:</label>
+                <input
+                    class="form__intput"
+                    x-model="email"
+                    x-on:keyup="delayedValidateEmail"
+                    type="email"
+                    name="email"
+                    id="id_email"
+                    required>
+                <div data-invalid-feedback class="invalid-feedback" x-text="emailError"></div>
+            </div>
+            <button
+                class="form__submit button button--primary"
+                type="submit">Reset my password</button>
+        </form>
     </div>
-    <button
-        class="form__submit button button--primary"
-        type="submit">Reset my password</button>
-</form>
+</section>
 {% endblock %}
