Style remaining password reset pages

--- a/rule4be/templates/rule4be/login.html
+++ b/rule4be/templates/rule4be/login.html
@@ -85,6 +85,7 @@
 
     <div
         id="loginSignupSectionTrigger"
+        class="hidden"
         hx-get="{% url 'load_login_signup_section' %}"
         hx-trigger="click"
         hx-swap="innerHTML"
