--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -1,9 +1,15 @@
+{% extends 'rule4be/main.html' %}
+{% load static %}
+
 {% block content %}
-<h2>Enter new password</h2>
-<h2>Password reset - Custom Template</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Change my password</button>
-</form>
+<section class="content-container h-dvh grid grid-cols-1 justify-center items-center">
+    <div class="section_content p-5 bg-custom-pattern">
+        <h2 class="form__title mx-auto text-center">Enter new password</h2>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Change my password</button>
+        </form>
+    </div>
+</section>
 {% endblock %}
