--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,3 +1,10 @@
+{% extends 'rule4be/main.html' %}
+{% load static %}
+
 {% block content %}
-<p class="text-center text-xl text-white bg-green-600 rounded-lg p-3">An email has been sent with instructions to reset your password.</p>
+<section class="content-container h-dvh grid grid-cols-1 justify-center items-center">
+    <div class="section_content p-5 bg-custom-pattern">
+        <p class="text-center text-xl text-white bg-green-600 rounded-lg p-3">An email has been sent with instructions to reset your password.</p>
+    </div>
+</section>
 {% endblock %}
