--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -1,4 +1,13 @@
+{% extends 'rule4be/main.html' %}
+{% load static %}
+
 {% block content %}
-<h2>Password reset - Custom Template</h2>
-<p>Your password has been set. You may go ahead and <a href="{% url 'load_login_page' %}">log in now</a>.</p>
+<section class="content-container h-dvh grid grid-cols-1 justify-center items-center">
+    <div class="section_content p-5 bg-custom-pattern">
+        <div class="text-center text-xl bg-white rounded-lg p-3">
+            <p class="font-medium">Your password has been set.</p>
+            <p class="mt-3">You may go ahead and <a class="font-medium text-blue-500 border-b-2 border-b-blue-500 hover:border-none" href="{% url 'load_login_page' %}">log in now</a>.</p>
+        </div>
+    </div>
+</section>
 {% endblock %}
