--- a/rule4be/templates/rule4be/login.html
+++ b/rule4be/templates/rule4be/login.html
@@ -4,7 +4,7 @@
 {% block content %}
 <section class="page__content flex flex-col items-center">
     <section class="page__intro bg-custom-pattern pb-5">
-        <div class="section__content py-5">
+        <div class="section__content md:py-5">
             <h1 class="page__header mx-auto text-3xl font-medium my-5">A journal to remind you how far you've come, the progress you've made towards your goals.</h1>
             <blockquote class="text-xl my-5 p-5 relative max-w-[55ch] mx-auto">
                 <i class="icon--quote text-4xl opacity-25"></i>
@@ -37,7 +37,7 @@
     <section class="how-it-works bg-custom-pattern py-5">
         <div class="section__content py-5">
             <h2 class="form__title mx-auto text-3xl">How it works</h2>
-            <div class="grid grid-cols-2 gap-4 bg-custom-pattern p-5 mt-12">
+            <div class="grid md:grid-cols-2 gap-4 bg-custom-pattern p-5 md:mt-12">
                 <div class="bg-white p-5">
                     <h2 class="text-2xl">Areas of Life</h2>
                     <p>Set up a feed for each area of life you want to track. This can be goals, like fitness, finance or a project. Rule4 is not just for goals though, set up personal AOLs just to keep you smiling.</p>
@@ -60,7 +60,7 @@
     <section class="testimonials py-5">
         <div class="section__content">
             <h2 class="form__title mx-auto">Testimonials</h2>
-            <div class="grid grid-cols-2 gap-4 mt-12">
+            <div class="grid md:grid-cols-2 gap-4 mt-12">
                 <div class="bg-white bg-custom-pattern p-5">
                     <p>Testimonial 1</p>
                 </div>
