--- a/rule4be/templates/rule4be/login_form.html
+++ b/rule4be/templates/rule4be/login_form.html
@@ -19,5 +19,5 @@
     <div>
         <button class="form__submit button button--primary" type="submit">Log In</button>
     </div>
-    <a class="button--text" href="{% url 'password_reset' %}">Forgot your password?</a>
+    <a class="button--text block mt-3 mx-auto w-fit" href="{% url 'password_reset' %}">Forgot your password?</a>
 </form>
