--- a/rule4be/templates/rule4be/login_signup_section.html
+++ b/rule4be/templates/rule4be/login_signup_section.html
@@ -1,6 +1,6 @@
 
 {% block content %}
-<div class="grid grid-cols-2 gap-8 bg-custom-pattern p-5 mx-auto">
+<div class="grid sm:grid-cols-2 gap-8 bg-custom-pattern md:p-5 mx-auto">
     <div
         id="loginContainer"
         class="login__container bg-white p-5"
