--- a/rule4be/templates/rule4be/main.html
+++ b/rule4be/templates/rule4be/main.html
@@ -36,7 +36,7 @@
 
 
 <body class="bg-white {{ body_class }}">
-    <main class="w-full min-h-screen flex flex-col">
+    <main class="min-h-screen flex flex-col mx-auto">
         <div id="pageContent" class="page-content__container">
             {% block content %}
 
