--- a/rule4be/templates/rule4be/profile.html
+++ b/rule4be/templates/rule4be/profile.html
@@ -48,6 +48,7 @@
             profileContainer.innerHTML = '';
             profileContainer.removeAllClasses();
             profileContainer.classList.add('transition-all', 'opacity-0', 'duration-300', 'ease-in-out');
+            document.body.click();
         }
     </script>
 </div>
