--- a/static/css/tailwind/tailwind-output.css
+++ b/static/css/tailwind/tailwind-output.css
@@ -455,8 +455,8 @@ html {
 }
 
 body.main-app > main {
-  margin: 0 auto;
-  max-width: 1440px;
+  /* margin: 0 auto;
+		max-width: 1440px; */
 }
 
 *, ::before, ::after {
@@ -643,15 +643,21 @@ body.main-app > main {
 
 /* Main App */
 
+.main-app main {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .main-app .page-content__container {
   margin-left: auto;
   margin-right: auto;
   margin-top: 1.25rem;
+  width: 100%;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1280px) {
   .main-app .page-content__container {
-    width: 1440px;
+    max-width: 1440px;
   }
 }
 
@@ -1382,6 +1388,18 @@ a:hover,
   margin-top: 2.5rem;
 }
 
+.page__content section {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+@media (min-width: 768px) {
+  .page__content section {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
+
 /* Cards - General */
 
 .card {
@@ -1412,67 +1430,67 @@ a:hover,
 
 /* Card Layouts */
 
-.card:not(:first-of-type) {
-  margin-top: 1.25rem;
-}
-
-@media (min-width: 640px) {
-  .card:not(:first-of-type) {
-    margin-top: 0px;
-  }
-}
-
 .card:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.card:nth-child(1) {
+.card:nth-child(1),
+	#aolNavMobile button:nth-child(1) {
   --tw-border-opacity: 1;
   border-color: rgb(191 219 254 / var(--tw-border-opacity));
 }
 
-.card:nth-child(2) {
+.card:nth-child(2),
+	#aolNavMobile button:nth-child(2) {
   --tw-border-opacity: 1;
   border-color: rgb(254 215 170 / var(--tw-border-opacity));
 }
 
-.card:nth-child(3) {
+.card:nth-child(3),
+	#aolNavMobile button:nth-child(3) {
   --tw-border-opacity: 1;
   border-color: rgb(187 247 208 / var(--tw-border-opacity));
 }
 
-.card:nth-child(4) {
+.card:nth-child(4),
+	#aolNavMobile button:nth-child(4) {
   --tw-border-opacity: 1;
   border-color: rgb(253 230 138 / var(--tw-border-opacity));
 }
 
-.card:nth-child(5) {
+.card:nth-child(5),
+	#aolNavMobile button:nth-child(5) {
   --tw-border-opacity: 1;
   border-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
 
-.card:nth-child(6) {
+.card:nth-child(6),
+	#aolNavMobile button:nth-child(6) {
   --tw-border-opacity: 1;
   border-color: rgb(254 202 202 / var(--tw-border-opacity));
 }
 
-.card:nth-child(7) {
+.card:nth-child(7),
+	#aolNavMobile button:nth-child(7) {
   --tw-border-opacity: 1;
   border-color: rgb(148 163 184 / var(--tw-border-opacity));
 }
 
-.card:nth-child(8) {
+.card:nth-child(8),
+	#aolNavMobile button:nth-child(8) {
   --tw-border-opacity: 1;
   border-color: rgb(216 180 254 / var(--tw-border-opacity));
 }
 
-.card:nth-child(9) {
+.card:nth-child(9),
+	#aolNavMobile button:nth-child(9) {
   --tw-border-opacity: 1;
   border-color: rgb(253 224 71 / var(--tw-border-opacity));
 }
 
-.card:nth-child(10) {
+.card:nth-child(10),
+	#aolNavMobile button:nth-child(10) {
   --tw-border-opacity: 1;
   border-color: rgb(251 113 133 / var(--tw-border-opacity));
 }
@@ -1535,6 +1553,23 @@ a:hover,
   }
 }
 
+/* === Mobile === */
+
+#aolNavMobile button {
+  border-radius: 0.5rem;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-width: 1px;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+#aolNavMobile button.active {
+  border-bottom-width: 4px;
+}
+
 /* === Error Pages === */
 
 .sr-only {
@@ -1589,12 +1624,28 @@ a:hover,
   top: -3rem;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
 .left-5 {
   left: 1.25rem;
 }
 
+.right-0 {
+  right: 0px;
+}
+
 .right-5 {
   right: 1.25rem;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .top-5 {
@@ -1603,6 +1654,10 @@ a:hover,
 
 .top-6 {
   top: 1.5rem;
+}
+
+.z-0 {
+  z-index: 0;
 }
 
 .z-50 {
@@ -1644,16 +1699,16 @@ a:hover,
   margin-top: 3rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
 }
 
 .block {
@@ -1696,6 +1751,14 @@ a:hover,
   height: 100dvh;
 }
 
+.h-full {
+  height: 100%;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
 .min-h-72 {
   min-height: 18rem;
 }
@@ -1721,12 +1784,20 @@ a:hover,
   min-width: 18rem;
 }
 
+.min-w-\[120px\] {
+  min-width: 120px;
+}
+
 .max-w-\[300px\] {
   max-width: 300px;
 }
 
 .max-w-\[55ch\] {
   max-width: 55ch;
+}
+
+.max-w-full {
+  max-width: 100%;
 }
 
 .border-collapse {
@@ -1745,8 +1816,8 @@ a:hover,
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -1803,6 +1874,10 @@ a:hover,
   row-gap: 1rem;
 }
 
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1817,14 +1892,6 @@ a:hover,
 
 .border {
   border-width: 1px;
-}
-
-.border-2 {
-  border-width: 2px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
 }
 
 .border-b-2 {
@@ -1871,11 +1938,6 @@ a:hover,
 
 .p-5 {
   padding: 1.25rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
 }
 
 .px-6 {
@@ -1950,10 +2012,6 @@ a:hover,
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.underline {
-  text-decoration-line: underline;
 }
 
 .opacity-0 {
@@ -2037,10 +2095,6 @@ a:hover,
   cursor: pointer;
 }
 
-.hover\:border-0:hover {
-  border-width: 0px;
-}
-
 .hover\:border-none:hover {
   border-style: none;
 }
@@ -2066,18 +2120,53 @@ a:hover,
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+@media (min-width: 640px) {
+  .sm\:relative {
+    position: relative;
+  }
+
+  .sm\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .sm\:mt-12 {
+    margin-top: 3rem;
+  }
+
+  .sm\:hidden {
+    display: none;
+  }
+
+  .sm\:h-auto {
+    height: auto;
+  }
+
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
 @media (min-width: 768px) {
+  .md\:mt-12 {
+    margin-top: 3rem;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:p-5 {
+    padding: 1.25rem;
+  }
+
+  .md\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
   }
 }
 
 @media (min-width: 1024px) {
   .lg\:w-1\/2 {
     width: 50%;
-  }
-
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
